--- a/PanelProject/PanelProject.csproj
+++ b/PanelProject/PanelProject.csproj
@@ -56,6 +56,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ButtonPanel.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Switch.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
